--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,5 @@
+<div id="hero" class="row">
+</div>
 <div class="container">
   <div class="col-sm-10 col-sm-offset-1 col-xs-12">
     <% @posts.each do |post| %>
