--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -6,16 +6,219 @@
   display: none;
 }
 
+abbr {
+  display: none;
+}
+
+h1 {
+  font-family: 'Raleway', sans-serif;
+  font-size: 48px;
+  color: white;
+  font-weight: 100;
+}
+h2 {
+  font-family: 'Raleway', sans-serif;
+  font-size: 36px;
+  color: white;
+  font-weight: 100;
+}
+h3 {
+  font-family: 'Raleway', sans-serif;
+  font-size: 24px;
+  color: white;
+}
+p {
+  font-family: 'Raleway', sans-serif;
+  font-size: 12px;
+  color: white;
+}
+label {
+  font-family: 'Raleway', sans-serif;
+  font-size: 14px;
+  color: white;
+}
+
+input {
+  font-family: 'Raleway', sans-serif;
+  -webkit-border-radius: 13px !important;
+  -moz-border-radius: 13px !important;
+  border-radius: 13px !important;
+}
+
 .navbar {
+  height: 100px;
   margin-bottom: 0px !important;
+  background-color: #1a1a23 !important;
+  border: 0px !important;
+  border-radius: 0px !important;
+  position: relative;
+}
+
+.navbar-brand {
+  font-size: 30px;
+  font-weight: 100;
+  color: white !important;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 200px;
+}
+
+.navbar-right {
+  font-size: 30px;
+  font-weight: 100;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 200px;
+}
+
+.navbar-right li a {
+  color: white !important;
+}
+
+.navbar-center {
+  margin: 0 auto;
+}
+.navbar-center img {
+  display: inline-block;
+  max-width: 110px;
+  max-height: 110px;
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.destak-text {
+  font-weight: 800;
 }
 
 #hero {
   top: 0;
-  background-image: image-url("placeholder-hero.png");
+  background-color: #5038fc;
   height:500px;
   background-repeat: no-repeat;
   background-position: center;
   background-size:cover;
+  position: relative;
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+}
+
+.infos-hero, .form-hero {
+  top: 40%;
+  margin-top: -40px;
+}
+
+.infos-hero h1 {
+  text-align: center;
+}
+
+.form-group_name {
+  white-space : nowrap;
+}
+
+.form-group_name .lead_name {
+  display: inline-block;
+  width: 50%;
+  padding-right: 10px;
+}
+
+.form-group_name .lead_surname {
+  display: inline-block;
+  width: 50%;
+  padding-right: 10px;
+}
+
+.form-group_email {
+  display: inline-block;
+  width: 100%;
+  padding-right: 5px;
+}
+
+.form-group_btn {
+  text-align: center;
+}
+
+.form-group_btn input {
+  background-color: #1a1a23;
+  color: white;
+  border: 0px;
+  font-size: 24px;
+}
+
+#basic-infos {
+  top: 0;
+  background-color: #31313b;
+  height: 500px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size:cover;
   background-attachment: fixed;
+  position: relative;
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+}
+
+#basic-infos {
+  height: auto;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+#box-basic-infos {
+  padding-left: 70px;
+  padding-right: 30px;
+}
+
+#box-basic-infos p {
+  margin-top: 40px;
+}
+
+
+#box-img-basic-info {
+  padding-left: 30px;
+  padding-right: 50px;
+}
+
+#basic-infos img {
+  height: auto;
+  width: 100%;
+}
+
+#minibox1-basic-infos {
+  display: inline-block;
+  width: 50%;
+  margin-top: 50px;
+}
+
+#minibox1-basic-infos p {
+  margin-top: 20px;
+}
+
+#minibox1-basic-infos img {
+  float: left;
+  width: 30%;
+  margin-right: 20px;
+  margin-top: 20px;
+}
+
+#minibox2-basic-infos {
+  display: inline-block;
+  width: 50%;
+  margin-top: 50px;
+}
+
+#minibox2-basic-infos p {
+  margin-top: 20px;
+}
+
+#minibox2-basic-infos img {
+  float: left;
+  width: 30%;
+  margin-right: 20px;
+  margin-top: 20px;
 }
