--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -36,9 +36,9 @@
 <div class="container-fluid">
   <section id="carrossel" class="row">
     <ul class="slider">
-      <li><div class="slider-content"><%= image_tag("placeholder-circle.png") %><p>No mundo atual, a complexidade dos estudos efetuados estimula a padronização dos conhecimentos estratégicos para atingir a excelência.</p></div></li>
-      <li><div class="slider-content"><%= image_tag("placeholder-circle.png") %><p>Não obstante, o fenômeno da Internet estimula a padronização das diretrizes de desenvolvimento para o futuro.</p></div></li>
-      <li><div class="slider-content"><%= image_tag("placeholder-circle.png") %><p>O cuidado em identificar pontos críticos no fenômeno da Internet possibilita uma melhor visão global dos índices pretendidos.</p></div></li>
+      <li><div class="slider-content"><h2></h2><p>No mundo atual, a complexidade dos estudos efetuados estimula a padronização dos conhecimentos estratégicos para atingir a excelência.</p></div></li>
+      <li><div class="slider-content"><h2></h2><p>Não obstante, o fenômeno da Internet estimula a padronização das diretrizes de desenvolvimento para o futuro.</p></div></li>
+      <li><div class="slider-content"><h2></h2><p>O cuidado em identificar pontos críticos no fenômeno da Internet possibilita uma melhor visão global dos índices pretendidos.</p></div></li>
     </ul>
   </section>
 </div>
