--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,15 @@
-<div class="col-sm-11 col-xs-12 blog-content">
-  <h2 class="text-center"><%= @post.title %></h2>
-  <h5 class="text-center"><%= @post.created_at.strftime('%b %d, %Y') %></h5>
-  <div><%= raw @post.body %></div>
+<div class="container-fluid">
+  <div class="col-xs-4">
+      <div class="form-hero col-md-6">
+        <%= render "posts/formherolayout2" %>
+      </div>
+  </div>
+  <div class="col-xs-8">
+      <div class="col-xs-12">
+          <h1 class="text-center"> <%= @post.title %> </h1>
+      </div>
+      <div class="col-xs-12">
+          <%= raw @post.body %>
+      </div>
+  </div>
 </div>
