--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+article {
+  padding: 30px;
+  height: auto;
+}
+
+#without-posts {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #5038fc;
+  text-align: center;
+}
