--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -14,24 +14,23 @@
     </section>
 
     <section class="col-md-4 sec-footer-right">
-      <div class="row">
-        <h3>Titulo h3 onde as coisas principais</h3>
-        <p>Ut anim offendit, summis incurreret aliquip, ita quis praetermissum qui veniam
-          ex ita veniam quibusdam, noster occaecat ne tamen legam a se export fabulas quo
-          fugiat offendit praetermissum in constias legam quibusdam.</p>
-      </div>
-      <div id="social-icons" class="row">
-        <div class="col-md-4">
-          <a href="https://www.facebook.com/empreendedorismoideias/"><%= fa_icon "facebook fa-4x" %></a>
-        </div>
-        <div class="col-md-4">
-          <a href=""><%= fa_icon "linkedin fa-4x" %></a>
-        </div>
-        <div class="col-md-4">
-          <a href="#"><%= fa_icon "twitter fa-4x" %></a>
-        </div>
-      </div>
+      <h3>Titulo h3 onde as coisas principais</h3>
+      <p>Ut anim offendit, summis incurreret aliquip, ita quis praetermissum qui veniam
+        ex ita veniam quibusdam, noster occaecat ne tamen legam a se export fabulas quo
+        fugiat offendit praetermissum in constias legam quibusdam.</p>
     </section>
-
-</div>
-</div>
+    <section id="social-icons">
+      <ul class="col-md-4 col-sx-12">
+        <li class="col-sx-4">
+          <a href="https://www.facebook.com/empreendedorismoideias/"><%= fa_icon "facebook fa-4x" %></a>
+        </li>
+        <li class="col-sx-4">
+          <a class="col-sx-4" href="#"><%= fa_icon "linkedin fa-4x" %></a>
+        </li>
+        <li class="col-sx-4">
+          <a class="col-sx-4" href="#"><%= fa_icon "twitter fa-4x" %></a>
+        </li>
+      </ul>
+    </section>
+  </div>
+</footer>
