--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>EmpreendedorismoIdeiasBlog</title>
-    <%= csrf_meta_tags %>
-
+    <title>Empreendedorismo Ideias!</title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
@@ -15,6 +13,6 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
       <%= yield %>
-    <%= render "layouts/footer" %>
   </body>
+  <%= render "layouts/footer" %>
 </html>
