--- a/app/assets/stylesheets/thanks.scss
+++ b/app/assets/stylesheets/thanks.scss
@@ -1,3 +1,10 @@
-// Place all the styles related to the thanks controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+$break-small: 360px;
+$break-medium: 768px;
+$break-large: 1280px;
+
+@media screen and (max-width: $break-small) {
+}
+@media screen and (min-width: $break-medium) {
+}
+@media screen and (min-width: $break-large) {
+}
