Home layout finished

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -19,6 +19,10 @@ $break-large: 1280px;
   .sec-footer-right {
     padding-right: 30px !important;
   }
+  #social-icons ul {
+    float: right;
+    padding: 0 50px;
+  }
 }
 @media screen and (min-width: $break-large) {
 }
