--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -11,11 +11,17 @@ $break-large: 1280px;
     margin-top: 70px;
   }
 
+  #basic-infos img {
+    height: auto;
+    width: 100%;
+  }
+
   #minibox1-basic-infos, #minibox2-basic-infos {
-    padding: 0 30px 30px 30px;
+    padding: 0px 30px 30px 30px;
   }
 
   #minibox1-basic-infos img, #minibox2-basic-infos img {
+    width: 100% !important;
     margin-top: 30px;
   }
   .right-arrow {
@@ -33,6 +39,9 @@ $break-large: 1280px;
   }
 }
 @media screen and (min-width: $break-medium) {
+  #hero {
+    padding-top: 50px !important;
+  }
   .infos-hero, .form-hero {
     top: 30%;
   }
@@ -40,7 +49,7 @@ $break-large: 1280px;
     margin-top: 30px;
   }
   #minibox2-basic-infos {
-    margin-top: 50px;
+    margin-top: 30px;
   }
   .right-arrow {
     right: 15%;
@@ -59,6 +68,8 @@ $break-large: 1280px;
   #minibox1-basic-infos img, #minibox2-basic-infos img  {
     float: left;
     width: 30%;
+    padding: 20px;
+    height: auto;
   }
 }
 @media screen and (min-width: $break-large) {
@@ -142,14 +153,20 @@ $break-large: 1280px;
   margin-top: 40px;
 }
 
+#box-basic-infos article {
+  padding-left: 30px;
+}
 
 #box-img-basic-info {
   padding-left: 30px;
   padding-right: 30px;
 }
 
-#basic-infos img {
-  height: auto;
+#minibox1-basic-infos img, #minibox2-basic-infos img {
+  width: 100% !important;
+}
+
+#box-img-basic-info img {
   width: 100%;
 }
 
@@ -211,11 +228,13 @@ $break-large: 1280px;
 .right-arrow {
   position: absolute;
   top: 45%;
+  right: 10%
 }
 
 .left-arrow {
   position: absolute;
   top: 45%;
+  left: 10%;
 }
 
 #highlight-posts {
