--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -2,6 +2,53 @@ $break-small: 360px;
 $break-medium: 768px;
 $break-large: 1280px;
 
+@media (max-width: 1200px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
+   .navbar-nav .open .dropdown-menu {
+       position: static;
+       float: none;
+       width: auto;
+       margin-top: 0;
+       background-color: transparent;
+       border: 0;
+       -webkit-box-shadow: none;
+       box-shadow: none;
+    }
+}
+
 @media screen and (max-width: $break-small) {
 }
 @media screen and (min-width: $break-medium) {
@@ -69,43 +116,38 @@ input {
   border: 0px !important;
   border-radius: 0px !important;
 }
+.navbar ul {
+  display: inline-block;
+  float: right;
+  margin-right: 50px;
+}
+
+.navbar-collapse {
+  position: relative;
+}
+
+.navbar li {
+  font-size: 24px;
+  padding: 30px 10px;
+}
+.navbar-nav li a {
+  color: white !important;
+}
+.navbar-nav li a:hover {
+  color: #5038fc !important;
+}
 
 .navbar-brand {
-  font-size: 30px;
-  font-weight: 100;
-  color: white !important;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 200px;
-}
-
-.navbar-right {
-  font-size: 30px;
-  font-weight: 100;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  right: 200px;
-}
-
-.navbar-right li a {
-  color: white !important;
-}
-
-.navbar-center {
-  margin: 0 auto;
-}
-.navbar-center img {
-  display: inline-block;
-  max-width: 110px;
-  max-height: 110px;
-  width: auto;
-  height: auto;
+  height: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  margin: 0px !important;
+}
+
+.navbar-header button {
+  margin: 30px;
 }
 
 .destak-text {
