--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
 </section>
 <section class="container-fluid">
   <div id="basic-infos" class="row">
-    <div id="box-basic-infos" class="col-sm-6">
+    <div id="box-basic-infos" class="col-sm-6 col-md-6">
       <article class="row">
         <h1>Titulo h1 onde as coisas <br/><spam class="destak-text">principais acontecem</spam></h1>
         <p>Gostaria de enfatizar que o aumento do diálogo entre os diferentes setores produtivos nos obriga à análise dos métodos utilizados na avaliação de resultados.</p>
@@ -28,7 +28,7 @@
         </article>
       </div>
     </div>
-    <div id="box-img-basic-info" class="col-sm-6">
+    <div id="box-img-basic-info" class="col-sm-6 col-md-6" >
       <%= image_tag("banner.png") %>
     </div>
   </div>
