--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,26 +9,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to 'Home', root_path, class: "navbar-brand" %>
     </div>
-    <div class="navbar-center">
-      <a>
-        <%= image_tag("logo-placeholder.jpg") %>
-      </a>
-    </div>
+    <%= image_tag("alta1.png", class: 'navbar-brand') %>
     <div class="collapse navbar-collapse" id="navbar-collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <% if admin_signed_in? %>
-        <!--This block is only visible to signed in admins -->
-          <li><%= link_to 'Novo post', new_post_path %></li>
-          <!-- <li><%= link_to 'Perfil', edit_admin_registration_path  %></li> -->
-          <li><%= link_to 'Edit Home', contents_path %></li>
-          <li><%= link_to 'Sair', destroy_admin_session_path, method: :delete %></li>
-        <!-- The block ends here -->
-        <% else %>
-          <li><%= link_to 'Posts', posts_path %></li>
-          <li><%= link_to 'Contato', contact_path %></li>
-        <% end %>
+      <ul class="nav navbar-nav">
+      <% if admin_signed_in? %>
+        <li><%= link_to 'Novo post', new_post_path %></li>
+        <li><%= link_to 'Edit Home', contents_path %></li>
+        <li><%= link_to 'Sair', destroy_admin_session_path, method: :delete %></li>
+      <% else %>
+        <li><%= link_to 'Posts', posts_path %></li>
+        <li><%= link_to 'Contato', contact_path %></li>
+      <% end %>
       </ul>
     </div>
   </div>
