--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -67,14 +67,16 @@ $break-large: 1280px;
 
   #minibox1-basic-infos img, #minibox2-basic-infos img  {
     float: left;
-    width: 30%;
+    width: 70%;
+    margin: 10px;
     padding: 20px;
     height: auto;
   }
 }
 @media screen and (min-width: $break-large) {
-  .infos-hero, .form-hero {
-    top: 40%;
+  #hero {
+    padding-top: 50px !important;
+    height: 500px !important;
   }
 }
 
@@ -160,10 +162,6 @@ $break-large: 1280px;
 #box-img-basic-info {
   padding-left: 30px;
   padding-right: 30px;
-}
-
-#minibox1-basic-infos img, #minibox2-basic-infos img {
-  width: 100% !important;
 }
 
 #box-img-basic-info img {
