Home layout, db and form alteration
- Added class form-group_occupation to home css file;
- Added select to style css file;
- Added enum occupation to lead.rb file;
- Changed social media icons and added link to Youtube channel;
- Added occupation select to form;
- Created migration AddOccupationToLead and changed default to 0 to use
at lead occupation;
- Added integer occupation to schema.rb.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -120,6 +120,11 @@ $break-large: 1280px;
   padding-right: 5px;
 }
 
+  display: inline-block;
+  width: 100%;
+  padding-right: 5px;
+}
+
 .form-group_btn {
   text-align: center;
 }
