--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -119,6 +119,13 @@ input {
   border-radius: 13px !important;
 }
 
+select {
+  font-family: 'Raleway', sans-serif;
+  -webkit-border-radius: 13px !important;
+  -moz-border-radius: 13px !important;
+  border-radius: 13px !important;
+}
+
 .navbar {
   height: 100px;
   margin-bottom: 0px !important;
