--- a/app/views/leads/_form.html.erb
+++ b/app/views/leads/_form.html.erb
@@ -23,6 +23,11 @@
     <%= f.input :email, label: 'Email:' %>
   </div>
   <br />
+    <%= label_tag "Qual a sua ocupação?" %>
+    <br />
+    <%= f.select(:occupation, Lead.options_for_select) %>
+  </div>
+  <br />
   <div class="form-group_btn">
     <%= f.button :submit, 'Cadastrar' %>
   </div>
