Home css and form alteration
- Added form-group_occupation to home css;
- Added class form-group_occupation to form.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -120,6 +120,7 @@ $break-large: 1280px;
   padding-right: 5px;
 }
 
+.form-group_occupation {
   display: inline-block;
   width: 100%;
   padding-right: 5px;
