Changed footer icon
- Changed twitter icon to linkedin icon.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -25,7 +25,7 @@
           <a href="https://www.facebook.com/empreendedorismoideias/" target="_blank"><%= fa_icon "facebook fa-4x" %></a>
         </li>
         <li class="col-sx-4">
-          <a class="col-sx-4" href="#" target="_blank"><%= fa_icon "twitter fa-4x" %></a>
+          <a class="col-sx-4" href="#" target="_blank"><%= fa_icon "linkedin fa-4x" %></a>
         </li>
         <li class="col-sx-4">
           <a class="col-sx-4" href="https://www.youtube.com/channel/UCKRkAsOZMW9bjXWZbVDiURw" target="_blank"><%= fa_icon "youtube-square fa-4x" %></a>
