--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,7 +10,6 @@
         <span class="icon-bar"></span>
       </button>
     </div>
-    <%= image_tag("alta1.png", class: 'navbar-brand') %>
     <div class="collapse navbar-collapse" id="navbar-collapse">
       <ul class="nav navbar-nav">
       <% if admin_signed_in? %>
@@ -24,4 +23,5 @@
       </ul>
     </div>
   </div>
+  <%= link_to image_tag("alta1.png", class: 'navbar-brand'), root_path %>
 </nav>
