--- a/app/views/leads/_form.html.erb
+++ b/app/views/leads/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @lead, html: ({class: 'form-lead'}) do |f| %>
+<%= simple_form_for @lead, html: ({class: 'form-lead col-xs-12 col-md-6'}) do |f| %>
   <% if @lead.errors.any? %>
     <div id="error_explanation">
       <h2>
@@ -19,10 +19,14 @@
     <%= f.input :surname, label: 'Sobrenome:' %>
   </div>
   <br />
-  <div class="form-group_email">
+  <div class="form-group_email ">
     <%= f.input :email, label: 'Email:' %>
   </div>
   <br />
+  <div class="form-group">
+    <%= label_tag "Qual a sua ocupação?" %>
+    <%= f.select :occupation, Lead.options_for_select %>
+  </div>
   <div class="form-group_btn">
     <%= f.button :submit, 'Cadastrar' %>
   </div>
