--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,11 @@
   <div id="hero" class="row">
     <div class="infos-hero col-md-6">
       <h1>Titulo h1 onde as coisas <br/><spam class="destak-text">principais acontecem</spam></h1>
+      <div class="row">
+          <div class="explications-hero col-md-12">
+            <p>Inscreva-se e receba um eBook gratuito com dicas<br/>valiosas de como gerar mais sucesso e acelerar seu negócio!</p>
+          </div>
+      </div>
     </div>
     <div class="form-hero col-md-6">
       <%= render "leads/form" %>
