--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -77,7 +77,10 @@ body {
 }
 
 .alert {
-  display: none;
+   background-color: red; 
+   margin-top: 30px; 
+   margin-bottom: 3px; 
+   display: block;
 }
 
 abbr {
