--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <!-- Render navigation bar -->
     <%= render "layouts/navigation" %>
     <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+     <%= flash_message.html_safe %> 
       <%= yield %>
   </body>
   <%= render "layouts/footer" %>
