Minor layout changes
- Changed youtube-square icon to youtube-play icon to a better view;
- Changed size of social media icons and their spaces to a better view
on smartphones.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -28,7 +28,7 @@
           <a class="col-sx-4" href="mailto:contato@empreendedorismoideias.com.br?subject=Eu%20Quero%20Empreender%20Melhor!"><%= fa_icon "envelope fa-4x" %></a>
         </li>
         <li class="col-sx-4">
-          <a class="col-sx-4" href="https://www.youtube.com/channel/UCKRkAsOZMW9bjXWZbVDiURw" target="_blank"><%= fa_icon "youtube-square fa-4x" %></a>
+          <a class="col-sx-4" href="https://www.youtube.com/channel/UCKRkAsOZMW9bjXWZbVDiURw" target="_blank"><%= fa_icon "youtube-play fa-4x" %></a>
         </li>
       </ul>
     </section>
