--- a/app/views/leads/_form.html.erb
+++ b/app/views/leads/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @lead, html: ({class: 'form-lead col-xs-12 col-md-6'}) do |f| %>
+<%= simple_form_for @lead, html: ({class: 'form-lead col-xs-12 col-md-12'}) do |f| %>
   <% if @lead.errors.any? %>
     <div id="error_explanation">
       <h2>
@@ -14,18 +14,20 @@
     </div>
   <% end %>
 
-  <div class="form-group_name">
+  <div class="form-group_name col-xs-12">
     <%= f.input :name, label: 'Nome:' %>
+  </div>
+  <div class="form-group_surname col-xs-12">
     <%= f.input :surname, label: 'Sobrenome:' %>
   </div>
   <br />
-  <div class="form-group_email ">
+  <div class="form-group_email col-xs-12">
     <%= f.input :email, label: 'Email:' %>
   </div>
   <br />
-  <div class="form-group_occupation">
+  <div class="form-group_occupation col-xs-12">
     <%= label_tag "Qual a sua ocupação?" %>
-    <br />
+  <br />
     <%= f.select(:occupation, Lead.options_for_select) %>
   </div>
   <br />
