--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,10 @@
 <footer class="container-fluid">
   <div class="row">
-    <section class="col-md-4 sec-footer-left">
+    <section class="sec-footer-left col-md-4 col-lg-4">
       <%= image_tag("placeholder-hero.png", id: 'logo-footer') %>
     </section>
 
-    <section class="col-md-4 sec-footer-mid">
+    <section class="col-md-4 col-lg-4 sec-footer-mid">
       <h3>Titulo h3 onde as coisas principais</h3>
       <p>Ut anim offendit, summis incurreret aliquip, ita quis praetermissum qui veniam
       ex ita veniam quibusdam, noster occaecat ne tamen legam a se export fabulas quo
@@ -13,14 +13,14 @@
       expetendis labore aut constias praetermissum.</p>
     </section>
 
-    <section class="col-md-4 sec-footer-right">
+    <section class="col-md-4 col-lg-4 sec-footer-right">
       <h3>Titulo h3 onde as coisas principais</h3>
       <p>Ut anim offendit, summis incurreret aliquip, ita quis praetermissum qui veniam
         ex ita veniam quibusdam, noster occaecat ne tamen legam a se export fabulas quo
         fugiat offendit praetermissum in constias legam quibusdam.</p>
     </section>
-    <section id="social-icons">
-      <ul class="col-md-4 col-sx-12">
+    <section id="social-icons" class="col-md-4 col-sx-12 col-lg-4">
+      <ul>
         <li class="col-sx-4">
           <a href="https://www.facebook.com/empreendedorismoideias/" target="_blank"><%= fa_icon "facebook fa-4x" %></a>
         </li>
